discussion/kv_engine/167137/167137_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49802: Log VB::Commit manifestUid if manifests not equal

We're seeing issues in which manifest uids in the on disk manifest
are not equal post-flush. Log the VB::Commit::Flush manifestUid which
is the source of the on disk value to narrow down the problem.

Change-Id: I3795d6a35b949a703a76f68adadb6ce932e76140

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-12-07 20:08:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-07 20:23:52.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35863/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35863/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42282/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(194): error C2228: left of ".collections" must have class/struct/union ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42282/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14400/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32: error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
                primaryVBCommit.collections.getManifestUid(),
                               ^
                               ->
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:195:34: error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
                secondaryVBCommit.collections.getManifestUid());
                                 ^
                                 ->

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14400/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14400/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4047/ : FAILURE

Compile error at [2021-12-07T20:10:29.245Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4047/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16034/ : FAILURE

Compile error at [2021-12-07T20:21:47.740Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:33:
error: request for member ?collections? in ?primaryVBCommit?, which is of pointer type ?const VB::Commit*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16034/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17101/ : FAILURE

Compile error at [2021-12-07T20:21:34.042Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master@2/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17101/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15203/ : FAILURE

Compile error at [2021-12-07T20:13:00.598Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24439/ : FAILURE

Compile error at [2021-12-07T20:21:05.055Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:32:
error: member reference type "const VB::Commit *" is a pointer; did you mean to use "->"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4105/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16324/ : FAILURE

Compile error at [2021-12-07T20:11:07.261Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:194:33:
error: request for member ?collections? in ?primaryVBCommit?, which is of pointer type ?const VB::Commit*? (maybe you meant to use ?->? ?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13225/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
